--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,14 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+
+/log
+/tmp
+/public/system
+/coverage/
+/spec/tmp
+/db/*.sqlite3
+/db/*.sqlite3-journal
+config/initializers/secret_token.rb
+config/secrets.yml
