--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ services:
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
-  - "rake db:migrate RAILS_ENV=test"
+  - "bundle exec rake db:migrate RAILS_ENV=test"
